--- a/premium/erotic-blueprint_provoker.html
+++ b/premium/erotic-blueprint_provoker.html
@@ -102,7 +102,7 @@
   </div>
     <h2>Power Dynamic Arc</h2>
   <p><strong>Relationship Trajectory:</strong><br>
-  Provokers are internally motivated mood-switches who lead with intensity. Their dominant energy doesn’t come from ego but from an instinctual desire to stir things up. When emotionally activated, they become commanding. When disinterested, they detach completely. Polarity is fluid, but the relationship suffers if they’re forced into predictability or control is taken from them.</p>
+  Provokers are driven by mood and momentum. The moment they sense tension, defiance, or desire, they move fast and take over. They don’t start soft, and they don’t follow scripts. They scan for the rules, then push to see how far they can bend them. Power is a dynamic to be tested, flipped, and rewritten in real time. It doesn’t matter how the scene begins, whether on their back, on their knees, or seemingly giving in. They always find a way to come out on top, in more ways than one. Predictability kills their spark. But give them something to push against and they’ll show you what real power feels like.</p>
 
   <p><strong>Polarity Shift Graph (Stock Chart Style):</strong></p>
   <ul>
@@ -124,11 +124,11 @@
 
   <p><strong>Theoretical Explanations:</strong></p>
   <ul>
-    <li><strong>Psychological Rough-Housing Theory:</strong> Provokers are sexual strategists. They crave arousal through conflict, tension, and the performance of disobedience.</li>
-    <li><strong>Diminished Disgust Theory:</strong> They are drawn to intensity and find pleasure in what others avoid. Discomfort becomes erotic, particularly when they cause it.</li>
-    <li><strong>Imprintation Theory:</strong> Early exposure to emotional instability or intense authority figures may have conditioned them to eroticize pushing buttons.</li>
-    <li><strong>Mimetic Desire Theory:</strong> They watched dominant figures control a room, a family, or a dynamic — and internalized that control as power and sex appeal.</li>
-    <li><strong>Evolutionary Biological Theory:</strong> Their aggression may be adaptive — a signal of reproductive fitness, charisma, and authority. Stirring arousal becomes a way of ensuring attention and influence.</li>
+    <li><strong>Psychological Rough-Housing Theory:</strong> They play with power as a way of learning limits, testing rules, and turning playful defiance into intimacy. They eroticize transgression.</li>
+    <li><strong>Diminished Disgust Theory:</strong> In early experiences, Provokers may have felt a rush from crossing lines, whether through teasing, disobedience, or taboo. The rush they felt from breaking the rules and getting away with it, or even being encouraged for it, began to feel inseparable from attention, power, and emotional bonding. Over time, arousal fused with the act of making others squirm, hesitate, or react by confronting something they thought would disgust them, then watching them want it. Because sexual arousal lowers disgust responses, they learned to play in that space where resistance turns to thrill. When discomfort shifts into laughter, arousal, or pleasure, it confirms what they crave most: that they have successfully bent the rules of the moment to their will and brought someone with them into their world.</li>
+    <li><strong>Imprintation Theory:</strong> Early interactions with unstable or overpowering authority figures may have created a template where control was something to challenge or reclaim. Over time, pushing emotional boundaries became arousing, not just as defiance but as a form of self-definition.</li>
+    <li><strong>Mimetic Desire Theory:</strong> They saw power used to control the emotional temperature of a room, a relationship, or a family. They learned that the one who provokes is the one who commands attention. Their desire formed around the idea that control, especially the kind taken rather than given, is the ultimate aphrodisiac.</li>
+    <li><strong>Evolutionary Biological Theory:</strong> Button-pushing may be more than rebellion. It may signal high mate value and a deep-rooted survival strategy. In ancestral environments, those who could provoke, disrupt, and stay composed often gained attention and influence. Provokers project boldness, unpredictability, and intensity. These traits helped them stand out in the tribe and win favor by making rivals or authority figures seem foolish, flustered, or weak. Stirring arousal becomes more than a game. It becomes a way to test interest, assert dominance, and ensure they are never controlled, dismissed, or forgotten.</li>
   </ul>
 
   <h2>Turn-On Vocabulary</h2>
