--- a/premium/erotic-blueprint_generous_giver.html
+++ b/premium/erotic-blueprint_generous_giver.html
@@ -124,8 +124,7 @@
 
   <p><strong>Theoretical Explanations:</strong></p>
   <ul>
-    <li><strong>Attachment Theory:</strong> Many Givers formed anxious-preoccupied bonds, leading them to seek validation by pleasing. But secure connections unlock their sensual confidence and co-creative energy.</li>
-    <li><strong>Mirror Theory:</strong> Their pleasure is responsive. They light up when someone reflects desire back at them—not just sexually, but emotionally.</li>
+    <li><strong>Attachment Theory:</strong> Many Givers formed anxious-preoccupied bonds, where love felt uncertain and needed to be earned. Pleasing others became a way to stay connected and avoid rejection. This early pattern shaped their erotic wiring, linking desire to being wanted through service. But in secure relationships, their anxiety softens. They become more playful, more generous by choice than fear. Real safety unlocks not just their trust, but their sensual confidence and creativity.</li>
     <li><strong>Blank Slate Theory:</strong> They were conditioned to believe love is earned by giving. Early family or cultural messages may have reinforced that care equals worth. As adults, giving becomes their erotic language.</li>
     <li><strong>Self-Esteem Theory:</strong> They feel most confident when their efforts are acknowledged. Being received deeply boosts their sense of value. Their turn-on is tied to the appreciation they evoke.</li>
     <li><strong>Mimetic Desire Theory:</strong> They learned what was desirable by watching others receive affection through acts of service or generosity. They eroticized giving by watching it succeed.</li>
