--- a/premium/erotic-blueprint_dungeon_master.html
+++ b/premium/erotic-blueprint_dungeon_master.html
@@ -117,17 +117,17 @@
   </ul>
 
   <p><strong>Ideal Dynamic:</strong><br>
-  The Dungeon Master thrives with a submissive who finds freedom in structure. The healthiest version of this relationship involves explicit agreements, devotional rituals, and deep psychological surrender, where the submissive doesn’t just obey but wants to obey.</p>
+  The healthiest version of this relationship involves explicit agreements, devotional rituals, and deep psychological surrender, where the submissive doesn’t just follow commands but takes genuine pleasure in giving up control.</p>
 
   <h2>Origins of Desire</h2>
-  <p>The Dungeon Master eroticizes power, precision, and the psychological intimacy that control creates. For them, dominance isn’t aggression, it’s discipline, ritual, and reverence.</p>
+  <p>The Dungeon Master doesn’t just crave control. They crave the emotional clarity it brings. They eroticize the moment when chaos gives way to order, when someone gives up resistance and starts following their lead. For them, dominance is not rooted in aggression but in a need to be trusted with everything. Their arousal is precision-based, outcome-focused, and deeply emotional. They don’t just want to be obeyed. They want to will their vision of the future into existence and feel someone willingly step into it. The more seamless the surrender, the more complete the fulfillment. Their power is not just physical. It is psychological proof that their inner world is strong enough to shape reality.</p>
 
   <ul>
-    <li><strong>Hereditary Theory:</strong> Their dominance may be inherited from generations of survival-oriented behaviors, where control meant security and leadership was essential to survival.</li>
-    <li><strong>Imprintation Theory:</strong> Early arousal may have been linked to being watched, obeyed, or obeying someone with total authority, instilling a desire to replicate those roles in adulthood.</li>
-    <li><strong>Blank Slate Theory:</strong> They were often told to lead, excel, or never show weakness. That conditioning evolved into sexual arousal at the feeling of invincibility and power.</li>
-    <li><strong>Exposure Therapy Theory:</strong> Some Dungeon Masters reclaim agency by turning past powerlessness into scenes where they decide every outcome.</li>
-    <li><strong>Self-Esteem Theory:</strong> They view dominance not just as hot, but as sacred. Being trusted with someone’s full surrender reinforces their core worth and erotic potency.</li>
+    <li><strong>Hereditary Theory:</strong> Their dominance may be rooted in generations of survival-based traits, where maintaining control over others was not just adaptive but essential. Leadership ensured safety. Predicting others’ behavior meant staying ahead of threats. Over time, this instinct to direct and contain evolved into a sexualized expression of power and protection.</li>
+    <li><strong>Imprintation Theory:</strong> At some point early on, they witnessed someone command total control: exacting, focused, and untouchable. Maybe it was a parent, a teacher, or a stranger who could shift the energy in a room without raising their voice. They didn’t just notice the power. They felt it. In that moment, control became inseparable from safety, certainty, and erotic charge. They weren’t drawn to the person. They were drawn to the feeling. The stillness. The precision. The way everything bent around that presence. Even before they had words for it, a blueprint was forming. One day, they would become the one in control. Not to imitate it, but to own it. To never feel powerless again. To build a world that answers to their design.</li>
+    <li><strong>Blank Slate Theory:</strong> They were raised to believe that strength earns respect, leadership is expected, and vulnerability is dangerous. Praise came when they performed, succeeded, or stayed in control. Over time, those lessons didn’t just shape their identity. They shaped their arousal. Dominance became the one place where they could be fully themselves, without apology or compromise. It became the space where power, performance, and desire finally aligned.</li>
+    <li><strong>Exposure Therapy Theory:</strong> Some Dungeon Masters know what it feels like to be powerless. Whether through neglect, chaos, or control imposed by others, they learned early how much it hurts to have no say. In adulthood, they reclaim that lost agency by creating scenes where nothing happens without their command. Every rule, every ritual, every outcome is theirs to decide. What once felt like helplessness becomes erotic clarity. In their world, they cannot be overpowered.</li>
+    <li><strong>Self-Esteem Theory:</strong> For the Dungeon Master, dominance is not just a turn-on. It is proof of inner worth. Being trusted with someone’s surrender is more than arousing. It is affirming. Each time a partner follows their lead, holds a boundary, or begs for more, it reinforces their sense of value. They don’t just want control for its own sake. They want it because it reflects who they are when they are most certain, most grounded, and most powerful.</li>
   </ul>
 
   <h2>Turn-On Vocabulary</h2>
@@ -182,7 +182,7 @@
 
   <h2>Erotic Edge & Drop</h2>
   <p><strong>Erotic Edge:</strong><br>
-  What others crave is how complete it feels to submit to them. The Dungeon Master doesn’t guess, they know. Their voice, their rituals, their gaze become commandments. They offer their submissive a spiritual release through obedience. What they do best is make surrender feel holy.</p>
+  Their partner craves how complete it feels to submit to them. The Dungeon Master doesn’t guess, they know. Their voice, their rituals, their gaze become hypnotic commands that cannot be resisted. They offer their submissive a spiritual release through obedience. What they do best is make surrender feel sublime</p>
 
   <p><strong>Erotic Drop (Dealbreaker):</strong><br>
   Disobedience without purpose. Bratty behavior that breaks protocol. Emotionally passive partners who say “do whatever you want” without true intention. The Dungeon Master needs submission that is chosen and honored, not handed over carelessly or used as manipulation.</p>
