--- a/premium/erotic-blueprint_claimed_and_trained.html
+++ b/premium/erotic-blueprint_claimed_and_trained.html
@@ -113,19 +113,19 @@
     <li>Partner becomes inconsistent → ⚠️ Sharp volatility</li>
     <li class="sub">Triggers abandonment fears and conditioning withdrawal</li>
     <li>Dominant relinquishes control → 🚨 Crash</li>
-    <li class="sub">Loss of identity. Erotic regression. Dynamic collapses</li>
+    <li class="sub">Loss of identity. The magnetic pull disappears. Without polarity, the dynamic collapses.</li>
   </ul>
 
   <p><strong>Ideal Dynamic:</strong><br>
-  They thrive in D/s relationships with clear rules, devoted rituals, and one trusted authority figure. The healthiest bond is built on mutual care, but with complete erotic hierarchy, they serve, and they want to. Their devotion grows through discipline and reward.</p>
+  Their deepest fulfillment comes from serving someone they admire, someone whose strength, foresight, and presence make surrender feel inevitable. The ideal partner doesn’t just take control. They know exactly what’s needed before a word is spoken. Their authority is earned through consistency, emotional intelligence, and an uncanny ability to read between every line. The Claimed and Trained archetype craves a partner who carefully designs an immersive plan that conditions their obedience and deepens their submission over time. When the power dynamic is right, the Dungeon Master leads with intention, guiding them deeper and deeper into a world built just for them, where every gesture, rule, and command pulls them into subspace.</p>
 
   <h2>Origins of Desire</h2>
-  <p>Claimed & Trained submissives are aroused by structure, power, and the feeling of being reshaped. Their desire is fueled by being owned, molded, and rewired, often willingly.</p>
+  <p>Whether they lead in daily life or live in quiet submission, Claimed & Trained submissives often trace their desires back to early experiences of structure, attention, or control. Being shaped by someone stronger became synonymous with feeling seen. Over time, that dynamic evolved into arousal, where the deepest thrill comes not from merely being told what to do, but from being read, studied, and remade by someone who truly understands what they need.</p>
 
   <p><strong>Theoretical Explanations:</strong></p>
   <ul>
-    <li><strong>Imprintation Theory:</strong> Their earliest arousal may have been linked to moments of being told what to do or being praised for obedience, permanently tying submission to pleasure.</li>
-    <li><strong>Exposure Therapy Theory:</strong> Some use erotic submission as a way to reclaim power over chaotic or confusing early relationships. Structure becomes safety.</li>
+    <li><strong>Imprintation Theory:</strong> Their earliest experiences of arousal may have been tied to praise, approval, or being told exactly what to do. Obedience wasn’t just rewarded. It felt good. That sense of safety and attention fused with desire, wiring submission to intimacy at a formative age. Being trained became a way to feel wanted.</li>
+    <li><strong>Exposure Therapy Theory:</strong> For some, early relationships were chaotic, inconsistent, or emotionally volatile. They couldn’t stop the uncertainty, but they learned to survive it by becoming hyper-attuned: reading tone, posture, silence, anything that helped them adapt to a volatile authority figure. In adulthood, submission becomes a way to transform that vigilance into something rewarding. They eroticize control not to escape fear, but to confront it on their own terms. By choosing to be led with structure and precision, they convert their worst fears into scripted pleasure. Obedience becomes a way to rehearse survival, to turn nightmare fuel into erotic fantasy, and to prepare for the worst by mastering it in the bedroom.</li>
     <li><strong>Self-Esteem Theory:</strong> They associate being controlled with being valued. When someone takes charge of them with precision, they feel seen.</li>
     <li><strong>Mimetic Desire Theory:</strong> They may have unconsciously mirrored powerful submissive figures from media or personal relationships, learning that obedience could be beautiful.</li>
     <li><strong>Blank Slate Theory:</strong> They were often taught that being “good” meant following rules. Their desire evolved from wanting to please into craving surrender.</li>
