--- a/premium/erotic-blueprint_claimed_and_trained.html
+++ b/premium/erotic-blueprint_claimed_and_trained.html
@@ -176,10 +176,10 @@
 
   <h2>Erotic Edge & Drop</h2>
   <p><strong>Erotic Edge:</strong><br>
-  What others crave is how completely they give in. Their obedience feels earned. They respond to training with arousal, reverence, and loyalty. Their superpower is how they eroticize being reshaped, they crave the voice that turns them into a better version of themselves.</p>
+  Their partner craves how completely they give in. Their obedience feels earned. They respond to training with arousal, reverence, and loyalty. Their superpower is how they eroticize being reshaped, they crave a partner that turns them into a better version of themselves.</p>
 
   <p><strong>Erotic Drop (Dealbreaker):</strong><br>
-  Being asked to lead, improvise, or dominate. Partners who don’t follow through on rules. A dominant who stops using commands and starts saying “whatever you want.” Without structure, they spiral. Without ownership, they seek something new.</p>
+  Being asked to lead, improvise, or dominate. Partners who don’t follow through on rules. A dominant who stops using commands and starts saying “whatever you want.” Without structure, they feel empty. Without ownership, they seek something new.</p>
     <div class="section">
     <h2>Erotic Short Story</h2>
     <p>You weren’t planning to go inside tonight.</p>
