--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -132,6 +132,62 @@
       background-color: white;
       color: black;
     }
+    @media (min-width: 1024px) {
+  body {
+    padding: 100px 60px;
+    font-size: 18px;
+  }
+
+  .logo-img {
+    max-width: 200px;
+    margin-top: 80px;
+    margin-bottom: 40px;
+  }
+
+  .page-title h1 {
+    font-size: 5rem;
+  }
+
+  .image-container {
+    max-width: 1000px;
+    margin: 0 auto 40px;
+  }
+
+  .image-pair {
+    display: flex;
+    flex-direction: row;
+    gap: 0;
+  }
+
+  .image-pair a {
+    width: 50%;
+  }
+
+  .image-pair img {
+    object-fit: cover;
+    height: 100%;
+    max-height: 500px;
+  }
+
+  .divider {
+    width: 6px;
+    background-color: gold;
+  }
+
+  .slogan {
+    font-size: 1.5rem;
+    margin-top: 12px;
+  }
+
+  h3 a {
+    font-size: 2rem;
+  }
+
+  .find-type-button {
+    font-size: 1.2rem;
+    padding: 14px 34px;
+  }
+}
   </style>
 </head>
 
@@ -147,12 +203,12 @@
     <div class="archetype-card">
       <div class="image-container">
         <div class="image-pair">
-          <a href="profiles/tender_protector.html"><img src="images/tender_protector_female.jpg" alt="Tender Protector - Female"></a>
+          <a href="erotic-blueprints_tender_protector.html"><img src="images/tender_protector_female.jpg" alt="Tender Protector - Female"></a>
           <div class="divider"></div>
-          <a href="profiles/tender_protector.html"><img src="images/tender_protector_male.jpg" alt="Tender Protector - Male"></a>
+          <a href="erotic-blueprints_tender_protector.html"><img src="images/tender_protector_male.jpg" alt="Tender Protector - Male"></a>
         </div>
       </div>
-      <h3><a href="profiles/tender_protector.html">Tender Protector</a></h3>
+      <h3><a href="erotic-blueprints_tender_protector.html">Tender Protector</a></h3>
       <p class="slogan">You lead with gravity, not volume.</p>
     </div>
 
@@ -160,12 +216,12 @@
     <div class="archetype-card">
       <div class="image-container">
         <div class="image-pair">
-          <a href="profiles/devoted_darling.html"><img src="images/devoted_darling_female.jpg" alt="Devoted Darling - Female"></a>
+          <a href="erotic-blueprints_devoted_darling.html"><img src="images/devoted_darling_female.jpg" alt="Devoted Darling - Female"></a>
           <div class="divider"></div>
-          <a href="profiles/devoted_darling.html"><img src="images/devoted_darling_male.jpg" alt="Devoted Darling - Male"></a>
+          <a href="erotic-blueprints_devoted_darling.html"><img src="images/devoted_darling_male.jpg" alt="Devoted Darling - Male"></a>
         </div>
       </div>
-      <h3><a href="profiles/devoted_darling.html">Devoted Darling</a></h3>
+      <h3><a href="erotic-blueprints_devoted_darling.html">Devoted Darling</a></h3>
       <p class="slogan">Nothing is as kinky as loyalty.</p>
     </div>
 
@@ -173,12 +229,12 @@
     <div class="archetype-card">
       <div class="image-container">
         <div class="image-pair">
-          <a href="profiles/heatwave.html"><img src="images/heatwave_female.jpg" alt="Heatwave - Female"></a>
+          <a href="erotic-blueprints_heatwave.html"><img src="images/heatwave_female.jpg" alt="Heatwave - Female"></a>
           <div class="divider"></div>
-          <a href="profiles/heatwave.html"><img src="images/heatwave_male.jpg" alt="Heatwave - Male"></a>
+          <a href="erotic-blueprints_heatwave.html"><img src="images/heatwave_male.jpg" alt="Heatwave - Male"></a>
         </div>
       </div>
-      <h3><a href="profiles/heatwave.html">Heatwave</a></h3>
+      <h3><a href="erotic-blueprints_heatwave.html">Heatwave</a></h3>
       <p class="slogan">There's no need to change who you are, because people will adjust to you.</p>
     </div>
 
@@ -186,12 +242,12 @@
     <div class="archetype-card">
       <div class="image-container">
         <div class="image-pair">
-          <a href="profiles/mood_multiplier.html"><img src="images/mood_multiplier_female.jpg" alt="Mood Multiplier - Female"></a>
+          <a href="erotic-blueprints_mood_multiplier.html"><img src="images/mood_multiplier_female.jpg" alt="Mood Multiplier - Female"></a>
           <div class="divider"></div>
-          <a href="profiles/mood_multiplier.html"><img src="images/mood_multiplier_male.jpg" alt="Mood Multiplier - Male"></a>
+          <a href="erotic-blueprints_mood_multiplier.html"><img src="images/mood_multiplier_male.jpg" alt="Mood Multiplier - Male"></a>
         </div>
       </div>
-      <h3><a href="profiles/mood_multiplier.html">Mood Multiplier</a></h3>
+      <h3><a href="erotic-blueprints_mood_multiplier.html">Mood Multiplier</a></h3>
       <p class="slogan">You match their vibe and raise it.</p>
     </div>
 <a href="index.html" class="find-type-button">Find Your Type</a>
@@ -204,12 +260,12 @@
       <div class="archetype-card">
         <div class="image-container">
           <div class="image-pair">
-            <a href="profiles/generous_giver.html"><img src="images/generous_giver_female.jpg" alt="Generous Giver - Female"></a>
+            <a href="erotic-blueprints_generous_giver.html"><img src="images/generous_giver_female.jpg" alt="Generous Giver - Female"></a>
             <div class="divider"></div>
-            <a href="profiles/generous_giver.html"><img src="images/generous_giver_male.jpg" alt="Generous Giver - Male"></a>
+            <a href="erotic-blueprints_generous_giver.html"><img src="images/generous_giver_male.jpg" alt="Generous Giver - Male"></a>
           </div>
         </div>
-        <h3><a href="profiles/generous_giver.html">Generous Giver</a></h3>
+        <h3><a href="erotic-blueprints_generous_giver.html">Generous Giver</a></h3>
         <p class="slogan">You have so much to give, you just need someone to give it to.</p>
       </div>
 
@@ -217,12 +273,12 @@
       <div class="archetype-card">
         <div class="image-container">
           <div class="image-pair">
-            <a href="profiles/promiscuous_plaything.html"><img src="images/promiscuous_plaything_female.jpg" alt="Promiscuous Plaything - Female"></a>
+            <a href="erotic-blueprints_promiscuous_plaything.html"><img src="images/promiscuous_plaything_female.jpg" alt="Promiscuous Plaything - Female"></a>
             <div class="divider"></div>
-            <a href="profiles/promiscuous_plaything.html"><img src="images/promiscuous_plaything_male.jpg" alt="Promiscuous Plaything - Male"></a>
+            <a href="erotic-blueprints_promiscuous_plaything.html"><img src="images/promiscuous_plaything_male.jpg" alt="Promiscuous Plaything - Male"></a>
           </div>
         </div>
-        <h3><a href="profiles/promiscuous_plaything.html">Promiscuous Plaything</a></h3>
+        <h3><a href="erotic-blueprints_promiscuous_plaything.html">Promiscuous Plaything</a></h3>
         <p class="slogan">Get ready for a wild ride!</p>
       </div>
 
@@ -230,12 +286,12 @@
       <div class="archetype-card">
         <div class="image-container">
           <div class="image-pair">
-            <a href="profiles/bedroom_adventurer.html"><img src="images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer - Female"></a>
+            <a href="erotic-blueprints_bedroom_adventurer.html"><img src="images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer - Female"></a>
             <div class="divider"></div>
-            <a href="profiles/bedroom_adventurer.html"><img src="images/bedroom_adventurer_male.jpg" alt="Bedroom Adventurer - Male"></a>
+            <a href="erotic-blueprints_bedroom_adventurer.html"><img src="images/bedroom_adventurer_male.jpg" alt="Bedroom Adventurer - Male"></a>
           </div>
         </div>
-        <h3><a href="profiles/bedroom_adventurer.html">Bedroom Adventurer</a></h3>
+        <h3><a href="erotic-blueprints_bedroom_adventurer.html">Bedroom Adventurer</a></h3>
         <p class="slogan">I'm up for anything and like to get down and dirty.</p>
       </div>
 
@@ -243,12 +299,12 @@
       <div class="archetype-card">
         <div class="image-container">
           <div class="image-pair">
-            <a href="profiles/charmer_in_charge.html"><img src="images/charmer_in_charge_female.jpg" alt="Charmer in Charge - Female"></a>
+            <a href="erotic-blueprints_charmer_in_charge.html"><img src="images/charmer_in_charge_female.jpg" alt="Charmer in Charge - Female"></a>
             <div class="divider"></div>
-            <a href="profiles/charmer_in_charge.html"><img src="images/charmer_in_charge_male.jpg" alt="Charmer in Charge - Male"></a>
+            <a href="erotic-blueprints_charmer_in_charge.html"><img src="images/charmer_in_charge_male.jpg" alt="Charmer in Charge - Male"></a>
           </div>
         </div>
-        <h3><a href="profiles/charmer_in_charge.html">Charmer in Charge</a></h3>
+        <h3><a href="erotic-blueprints_charmer_in_charge.html">Charmer in Charge</a></h3>
         <p class="slogan">You don’t just take control. You make them beg for it.</p>
       </div>
 <a href="index.html" class="find-type-button">Find Your Type</a>  
@@ -262,12 +318,12 @@
       <div class="archetype-card">
         <div class="image-container">
           <div class="image-pair">
-            <a href="profiles/claimed_and_trained.html"><img src="images/claimed__trained_female.jpg" alt="Claimed & Trained - Female"></a>
+            <a href="erotic-blueprints_claimed_and_trained.html"><img src="images/claimed__trained_female.jpg" alt="Claimed & Trained - Female"></a>
             <div class="divider"></div>
-            <a href="profiles/claimed_and_trained.html"><img src="images/claimed__trained_male.jpg" alt="Claimed & Trained - Male"></a>
+            <a href="erotic-blueprints_claimed_and_trained.html"><img src="images/claimed__trained_male.jpg" alt="Claimed & Trained - Male"></a>
           </div>
         </div>
-        <h3><a href="profiles/claimed_and_trained.html">Claimed & Trained</a></h3>
+        <h3><a href="erotic-blueprints_claimed_and_trained.html">Claimed & Trained</a></h3>
         <p class="slogan">The deeper you give in the more pleasure you'll feel.</p>
       </div>
 
@@ -275,12 +331,12 @@
       <div class="archetype-card">
         <div class="image-container">
           <div class="image-pair">
-            <a href="profiles/the_punish_me.html"><img src="images/the_punish_me_female.jpg" alt="The Punish Me - Female"></a>
+            <a href="erotic-blueprints_the_punish_me.html"><img src="images/the_punish_me_female.jpg" alt="The Punish Me - Female"></a>
             <div class="divider"></div>
-            <a href="profiles/the_punish_me.html"><img src="images/the_punish_me_male.jpg" alt="The Punish Me - Male"></a>
+            <a href="erotic-blueprints_the_punish_me.html"><img src="images/the_punish_me_male.jpg" alt="The Punish Me - Male"></a>
           </div>
         </div>
-        <h3><a href="profiles/the_punish_me.html">The Punish Me</a></h3>
+        <h3><a href="erotic-blueprints_the_punish_me.html">The Punish Me</a></h3>
         <p class="slogan">What you call defiance, I call foreplay.</p>
       </div>
 
@@ -288,12 +344,12 @@
       <div class="archetype-card">
         <div class="image-container">
           <div class="image-pair">
-            <a href="profiles/the_provoker.html"><img src="images/the_provoker_female.jpg" alt="The Provoker - Female"></a>
+            <a href="erotic-blueprints_the_provoker.html"><img src="images/the_provoker_female.jpg" alt="The Provoker - Female"></a>
             <div class="divider"></div>
-            <a href="profiles/the_provoker.html"><img src="images/the_provoker_male.jpg" alt="The Provoker - Male"></a>
+            <a href="erotic-blueprints_the_provoker.html"><img src="images/the_provoker_male.jpg" alt="The Provoker - Male"></a>
           </div>
         </div>
-        <h3><a href="profiles/the_provoker.html">The Provoker</a></h3>
+        <h3><a href="erotic-blueprints_the_provoker.html">The Provoker</a></h3>
         <p class="slogan">You press buttons...on purpose.</p>
       </div>
 
@@ -301,12 +357,12 @@
       <div class="archetype-card">
         <div class="image-container">
           <div class="image-pair">
-            <a href="profiles/dungeon_master.html"><img src="images/dungeon_master_female.jpg" alt="Dungeon Master - Female"></a>
+            <a href="erotic-blueprints_dungeon_master.html"><img src="images/dungeon_master_female.jpg" alt="Dungeon Master - Female"></a>
             <div class="divider"></div>
-            <a href="profiles/dungeon_master.html"><img src="images/dungeon_master_male.jpg" alt="Dungeon Master - Male"></a>
+            <a href="erotic-blueprints_dungeon_master.html"><img src="images/dungeon_master_male.jpg" alt="Dungeon Master - Male"></a>
           </div>
         </div>
-        <h3><a href="profiles/dungeon_master.html">Dungeon Master</a></h3>
+        <h3><a href="erotic-blueprints_dungeon_master.html">Dungeon Master</a></h3>
         <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
       </div>
 
