--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -145,7 +145,7 @@
   }
 
   .page-title h1 {
-    font-size: 5rem;
+    font-size: 6rem;
   }
 
   .image-container {
@@ -175,7 +175,7 @@
   }
 
   .slogan {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     margin-top: 12px;
   }
 
@@ -191,14 +191,14 @@
   </style>
 </head>
 
-<body class="blue-room">
+<body>
   <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo-img" />
   <div class="title-line"></div>
   <div class="page-title">
     <h1>Sexual Profiles</h1>
   </div>
   <div class="title-line"></div>
-    <div class="section container">
+    <div class="section container blue-room">
     <!-- Tender Protector -->
     <div class="archetype-card">
       <div class="image-container">
