--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -192,13 +192,14 @@
 </head>
 
 <body>
-  <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo-img" />
-  <div class="title-line"></div>
-  <div class="page-title">
-    <h1>Sexual Profiles</h1>
-  </div>
-  <div class="title-line"></div>
-    <div class="section container blue-room">
+  <div class="blue-room">
+    <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo-img" />
+    <div class="title-line"></div>
+    <div class="page-title">
+      <h1>Sexual Profiles</h1>
+    </div>
+    <div class="title-line"></div>
+    <div class="section container">
     <!-- Tender Protector -->
     <div class="archetype-card">
       <div class="image-container">
