--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -6,8 +6,13 @@
   <title>Sexual Profiles</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,700&family=Poppins:ital,wght@1,700&display=swap" rel="stylesheet">
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Montserrat', sans-serif; }
+  html, body {
+    margin: 0;
+    padding: 0;
+  }
+
+  * { margin: 0; padding: 0; box-sizing: border-box; }
+  body { font-family: 'Montserrat', sans-serif; }
 
     .blue-room { background-color: #064D95; }
     .green-room { background-color: #06954E; }
