--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -6,10 +6,11 @@
   <title>Sexual Profiles</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,700&family=Poppins:ital,wght@1,700&display=swap" rel="stylesheet">
   <style>
-  html, body {
-    margin: 0;
-    padding: 0;
-  }
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
 
   * { margin: 0; padding: 0; box-sizing: border-box; }
   body { font-family: 'Montserrat', sans-serif; }
@@ -23,7 +24,7 @@
       margin: 0 auto;
       max-width: 125px;
       height: auto;
-      padding-top: 10px;
+      padding-top: 0px;
       padding-bottom: 10px;
     }
 
