--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -11,11 +11,20 @@ html, body {
   padding: 0;
   height: 100%;
 }
+    html {
+  background-color: #064D95;
+}
 
   * { margin: 0; padding: 0; box-sizing: border-box; }
   body { font-family: 'Montserrat', sans-serif; }
 
-    .blue-room { background-color: #064D95; }
+    .blue-room {
+  background-color: #064D95;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+}
     .green-room { background-color: #06954E; }
     .red-room { background-color: #950606; }
 
