--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -147,60 +147,49 @@ html, body {
       background-color: white;
       color: black;
     }
-    @media (min-width: 1024px) {
+   @media (min-width: 1024px) {
   body {
     padding: 0;
-    font-size: 18px;
+    font-size: 20px;
   }
 
   .logo-img {
-    max-width: 200px;
-    margin-top: 80px;
-    margin-bottom: 40px;
+    max-width: 260px;
+    margin-top: 60px;
+    margin-bottom: 50px;
   }
 
   .page-title h1 {
-    font-size: 6rem;
+    font-size: 6.4rem;
+    line-height: 1.1;
+    margin-bottom: 40px;
   }
 
   .image-container {
-    max-width: 1000px;
-    margin: 0 auto 40px;
-  }
-
-  .image-pair {
-    display: flex;
-    flex-direction: row;
-    gap: 0;
-  }
-
-  .image-pair a {
-    width: 50%;
+    max-width: 1200px;
+    margin: 0 auto 60px;
   }
 
   .image-pair img {
     object-fit: cover;
     height: 100%;
-    max-height: 500px;
-  }
-
-  .divider {
-    width: 6px;
-    background-color: gold;
+    max-height: 600px;
   }
 
   .slogan {
-    font-size: 1.8rem;
-    margin-top: 12px;
+    font-size: 2rem;
+    line-height: 1.6;
+    margin-top: 16px;
   }
 
   h3 a {
-    font-size: 2rem;
+    font-size: 2.4rem;
   }
 
   .find-type-button {
-    font-size: 1.2rem;
-    padding: 14px 34px;
+    font-size: 1.5rem;
+    padding: 16px 40px;
+    border-width: 3px;
   }
 }
   </style>
