--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -147,49 +147,69 @@ html, body {
       background-color: white;
       color: black;
     }
-   @media (min-width: 1024px) {
+ @media (min-width: 1024px) {
   body {
     padding: 0;
-    font-size: 20px;
+    font-size: 22px;
   }
 
   .logo-img {
-    max-width: 260px;
-    margin-top: 60px;
-    margin-bottom: 50px;
+    max-width: 300px;
+    margin-top: 80px;
+    margin-bottom: 60px;
   }
 
   .page-title h1 {
-    font-size: 6.4rem;
+    font-size: 7.2rem;
     line-height: 1.1;
-    margin-bottom: 40px;
+    margin-bottom: 50px;
+    font-weight: 700;
+    text-align: center;
+  }
+
+  .title-line {
+    max-width: 1000px;
+    margin: 12px auto;
   }
 
   .image-container {
-    max-width: 1200px;
-    margin: 0 auto 60px;
+    max-width: 1400px;
+    margin: 0 auto 80px auto;
   }
 
   .image-pair img {
     object-fit: cover;
     height: 100%;
-    max-height: 600px;
+    max-height: 700px;
   }
 
   .slogan {
-    font-size: 2rem;
+    font-size: 2.4rem;
     line-height: 1.6;
-    margin-top: 16px;
+    margin-top: 20px;
+    text-align: center;
   }
 
   h3 a {
-    font-size: 2.4rem;
+    font-size: 2.8rem;
+    text-align: center;
+    display: block;
+    margin-top: 12px;
+  }
+
+  .archetype-card {
+    margin-bottom: 80px;
   }
 
   .find-type-button {
-    font-size: 1.5rem;
-    padding: 16px 40px;
+    font-size: 1.8rem;
+    padding: 18px 50px;
     border-width: 3px;
+    margin-top: 60px;
+  }
+
+  .section {
+    padding: 80px 40px 40px;
   }
 }
   </style>
