--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -179,26 +179,43 @@ html, body {
 
   .image-pair img {
     object-fit: cover;
-    height: 100%;
-    max-height: 700px;
+    height: auto;
+    max-height: none;
+    width: 100%;
   }
 
-  .slogan {
-    font-size: 2.4rem;
-    line-height: 1.6;
-    margin-top: 20px;
-    text-align: center;
+  .image-pair {
+    gap: 0;
   }
 
-  h3 a {
-    font-size: 2.8rem;
-    text-align: center;
-    display: block;
-    margin-top: 12px;
+  .image-pair a {
+    width: 50%;
+  }
+
+  .divider {
+    width: 6px;
+    background-color: gold;
   }
 
   .archetype-card {
-    margin-bottom: 80px;
+    margin-bottom: 100px;
+  }
+
+  h3 a {
+    font-size: 3rem;
+    text-align: center;
+    display: block;
+    margin-top: 20px;
+  }
+
+  .slogan {
+    font-size: 2.2rem;
+    line-height: 1.6;
+    margin-top: 18px;
+    text-align: center;
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .find-type-button {
