--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -147,7 +147,7 @@ html, body {
       background-color: white;
       color: black;
     }
- @media (min-width: 1024px) {
+@media (min-width: 1024px) {
   body {
     padding: 0;
     font-size: 22px;
@@ -172,32 +172,42 @@ html, body {
     margin: 12px auto;
   }
 
- .image-container {
-  max-width: none;
-  width: 100%;
-  margin: 0 auto 80px auto;
-  display: flex;
-  justify-content: center;
-}
+  .section {
+    padding: 80px 0 40px;
+  }
 
-.image-pair {
-  display: flex;
-  width: 100%;
-  max-width: 1600px;
-  gap: 0;
-}
+  .container {
+    max-width: none;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+  }
 
-.image-pair a {
-  width: 50%;
-}
+  .image-container {
+    max-width: none;
+    width: 100%;
+    margin: 0 auto 80px auto;
+    border: none;
+    display: flex;
+    justify-content: center;
+  }
 
-.image-pair img {
-  width: 100%;
-  height: auto;
-  display: block;
-  object-fit: contain;
-  max-height: none;
-}
+  .image-pair {
+    display: flex;
+    width: 100%;
+    max-width: 1800px;
+  }
+
+  .image-pair a {
+    width: 50%;
+  }
+
+  .image-pair img {
+    width: 100%;
+    height: auto;
+    display: block;
+    object-fit: contain;
+  }
 
   .divider {
     width: 6px;
@@ -216,9 +226,9 @@ html, body {
   }
 
   .slogan {
-    font-size: 2.2rem;
+    font-size: 2.4rem;
     line-height: 1.6;
-    margin-top: 18px;
+    margin-top: 20px;
     text-align: center;
     max-width: 1000px;
     margin-left: auto;
@@ -231,6 +241,7 @@ html, body {
     border-width: 3px;
     margin-top: 60px;
   }
+}
 
   .section {
     padding: 80px 40px 40px;
