--- a/Result.html
+++ b/Result.html
@@ -90,6 +90,66 @@
     img.no-save {
       user-select: none;
     }
+
+    @media (min-width: 1024px) {
+  body {
+    padding: 80px 40px;
+    font-size: 22px;
+  }
+
+  .title {
+    font-size: 6rem;
+    margin-bottom: 40px;
+  }
+
+  .subtitle {
+    font-size: 2.4rem;
+    margin-bottom: 40px;
+  }
+
+  .section {
+    font-size: 1.8rem;
+    line-height: 1.8;
+    max-width: 1000px;
+    margin: 40px auto;
+  }
+
+  #typeDetails {
+    font-size: 1.6rem;
+    line-height: 1.6;
+  }
+
+  .profile-caption {
+    font-size: 1.6rem;
+    margin-top: 16px;
+  }
+
+  button,
+  #moreAboutBtn {
+    font-size: 1.5rem;
+    padding: 16px 36px;
+    border-width: 3px;
+    margin-top: 40px;
+  }
+
+  img.no-save {
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+    border: 6px solid gold;
+    border-radius: 24px;
+    box-shadow: 0 0 15px rgba(255, 215, 0, 0.5);
+    margin-top: 30px;
+  }
+
+  .premium-cta {
+    font-size: 1.8rem;
+    margin-top: 60px;
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
   </style>
 </head>
 <body id="resultBody">
@@ -225,7 +285,7 @@
     });
   </script>
  <div style="margin-top: 50px;">
-  <div style="font-size: 1.25rem; margin-bottom: 16px; color: white; opacity: 0.95; max-width: 700px; margin-left: auto; margin-right: auto;">
+<div class="premium-cta">
     <span style="font-style: italic;">Want to go deeper?</span> This is just the beginning. Your Premium Sexual Profile reveals the psychology behind your desires and how it shapes your love life, turn-ons, and compatibility.
   </div>
   <a href="https://lelibido.com/premium-profiles.html">
