--- a/Result.html
+++ b/Result.html
@@ -132,15 +132,16 @@
     margin-top: 40px;
   }
 
-  img.no-save {
-    max-width: 100%;
-    width: 100%;
-    height: auto;
-    border: 6px solid gold;
-    border-radius: 24px;
-    box-shadow: 0 0 15px rgba(255, 215, 0, 0.5);
-    margin-top: 30px;
-  }
+ img.no-save {
+  max-width: 700px;
+  width: 100%;
+  height: auto;
+  border: 6px solid gold;
+  border-radius: 24px;
+  box-shadow: 0 0 15px rgba(255, 215, 0, 0.5);
+  margin: 30px auto;
+  display: block;
+}
 
   .premium-cta {
     font-size: 1.8rem;
