--- a/Result.html
+++ b/Result.html
@@ -230,7 +230,7 @@
       </div>
       <a href="${profilePath}">
         <img src="${imagePath}" alt="${typeName}" class="no-save" oncontextmenu="return false" style="
-          max-width: 100%;
+         max-width: 400px;
           height: auto;
           border-radius: 16px;
           margin: 15px 0;
