--- a/Result.html
+++ b/Result.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+fimg src<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -229,14 +229,16 @@
         ${slogan}
       </div>
       <a href="${profilePath}">
-        <img src="${imagePath}" alt="${typeName}" class="no-save" oncontextmenu="return false" style="
-         max-width: 400px;
-          height: auto;
-          border-radius: 16px;
-          margin: 15px 0;
-          border: 4px solid gold;
-          box-shadow: 0 0 8px rgba(255, 215, 0, 0.6);
-        ">
+       <img src="${imagePath}" alt="${typeName}" class="no-save" oncontextmenu="return false" style="
+  max-width: 400px;
+  width: 100%;
+  height: auto;
+  display: block;
+  margin: 30px auto;
+  border: 4px solid gold;
+  border-radius: 16px;
+  box-shadow: 0 0 8px rgba(255, 215, 0, 0.6);
+">
       </a>
       <div class="profile-caption">Tap image to reveal more about your sexual profile</div>
     `;
