--- a/Result.html
+++ b/Result.html
@@ -219,29 +219,29 @@ fimg src<!DOCTYPE html>
     const profilePath = `/profiles/${linkSafeName}.html`;
 
     archetypeText.innerHTML = `
-      <div style="text-decoration: underline; font-weight: normal; margin-bottom: 6px;">
-        Your Sexual Profile:
-      </div>
-      <div style="font-weight: bold; font-size: 1.7rem; margin-bottom: 8px;">
-        <a href="${profilePath}" class="no-underline">${typeName}</a>
-      </div>
-      <div style="font-style: italic; margin-bottom: 12px;">
-        ${slogan}
-      </div>
-      <a href="${profilePath}">
-       <img src="${imagePath}" alt="${typeName}" class="no-save" oncontextmenu="return false" style="
-  max-width: 400px;
-  width: 100%;
-  height: auto;
-  display: block;
-  margin: 30px auto;
-  border: 4px solid gold;
-  border-radius: 16px;
-  box-shadow: 0 0 8px rgba(255, 215, 0, 0.6);
-">
-      </a>
-      <div class="profile-caption">Tap image to reveal more about your sexual profile</div>
-    `;
+  <div style="text-decoration: underline; font-weight: normal; margin-bottom: 6px;">
+    Your Sexual Profile:
+  </div>
+  <div style="font-weight: bold; font-size: 2.8rem; margin-bottom: 8px;">
+    <a href="${profilePath}" class="no-underline">${typeName}</a>
+  </div>
+  <div style="font-style: italic; font-size: 2rem; margin-bottom: 12px;">
+    ${slogan}
+  </div>
+  <a href="${profilePath}">
+    <img src="${imagePath}" alt="${typeName}" class="no-save" oncontextmenu="return false" style="
+      max-width: 400px;
+      width: 100%;
+      height: auto;
+      display: block;
+      margin: 30px auto;
+      border: 4px solid gold;
+      border-radius: 16px;
+      box-shadow: 0 0 8px rgba(255, 215, 0, 0.6);
+    ">
+  </a>
+  <div class="profile-caption">Tap image to reveal more about your sexual profile</div>
+`;
 
     const matches = {
       "Devoted Darling": ["Tender Protector", "Heatwave", "Promiscuous Plaything"],
