--- a/Result.html
+++ b/Result.html
@@ -263,7 +263,11 @@
       box-shadow: 0 0 8px rgba(255, 215, 0, 0.6);
     ">
   </a>
-  <div class="profile-caption">Tap image to reveal more about your sexual profile</div>
+ <div class="profile-caption">
+  <a href="/premium/erotic-blueprint_${linkSafeName}.html" class="no-underline" style="color: gold; font-weight: bold; text-decoration: underline;">
+    Click here to reveal your full sexual profile
+  </a>
+</div>
 `;
 
     const matches = {
