--- a/Result.html
+++ b/Result.html
@@ -184,7 +184,24 @@
   <div class="section" id="compatibilityText"></div>
   <div class="section" id="sugarText"></div>
   <div class="section" id="inviteText"></div>
-  <div><button id="moreAboutBtn">More about you</button></div>
+  <div>
+  <a id="moreAboutBtn" href="/premium/erotic-blueprint_${linkSafeName}.html" style="
+    display: inline-block;
+    margin-top: 40px;
+    padding: 16px 36px;
+    font-weight: bold;
+    font-size: 1.5rem;
+    border: 3px solid white;
+    background-color: transparent;
+    color: white;
+    font-style: italic;
+    border-radius: 10px;
+    cursor: pointer;
+    text-decoration: none;
+  ">
+    Your Full Sexual Profile
+  </a>
+</div>
   <div id="typeDetails"></div>
 
   <script>
@@ -309,32 +326,6 @@
         Go play <strong>The Pickup Line</strong>! Once you’re in, you won’t want to pull out.
       `;
     }
-
-    moreAboutBtn.addEventListener("click", () => {
-      window.location.href = profilePath;
-    });
   </script>
- <div style="margin-top: 50px;">
-<div class="premium-cta">
-    <span style="font-style: italic;">Want to go deeper?</span> This is just the beginning. Your Premium Sexual Profile reveals the psychology behind your desires and how it shapes your love life, turn-ons, and compatibility.
-  </div>
-  <a href="https://lelibido.com/premium-profiles.html">
-    <button style="
-      margin-top: 10px;
-      padding: 16px 32px;
-      font-weight: bold;
-      font-size: 1.15rem;
-      border: 2px solid white;
-      background-color: transparent;
-      color: white;
-      font-style: italic;
-      border-radius: 10px;
-      cursor: pointer;
-    ">
-      Unlock Your Premium Sexual Profile
-    </button>
-  </a>
-</div>
-</style>
 </body>
 </html>
