--- a/Result.html
+++ b/Result.html
@@ -96,7 +96,12 @@
   font-size: 2rem;
   margin-bottom: 12px;
 }
-
+img.no-save {
+  user-select: none;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 @media (min-width: 1024px) {
   .archetype-name {
     font-size: 3.2rem;
